--- a/himamen.html
+++ b/himamen.html
@@ -8,155 +8,140 @@
     <!-- Fonts & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/organisasi.css">
     <link rel="stylesheet" href="./components/style-components.css">
     <script src="js/loader.js"></script>
-
 </head>
 
 <body>
 
-<div id="navbar"></div>
+<header>
+<!-- ================= Navbar ================= -->
+    <div id="navbar"></div>
+</header>
 
-<section class="org-hero">
-    <div class="org-logo-wrap">
-        <img src="image/icon/himamen.png" alt="Himamen Trilogi">
-    </div>
-
-    <div class="org-text">
-        <h1>HIMAMEN Trilogi</h1>
-        <p class="org-intro">HIMAMEN (Himpunan Mahasiswa Manajemen) Trilogi is a student organization at the study program level that serves as a platform for developing academic competence, leadership, and soft skills among Management students. </p>
-    </div>
-</section>
-
-<section class="org-core"> 
-    <div class="core-text">
-        <span class="section-label">ROLE OVERVIEW</span>
-        <h2>Core Responsibilities</h2>
-
-        <!-- ROLE 1 -->
-        <div class="role-block">
-            <p class="org-position">
-                Secretary<br>
-                <span>2022 — 2023</span>
-            </p>
-
-            <ul class="core-list">
-                <li>
-                    Managed administrative tasks by organizing and archiving 100+ official documents, including proposals, accountability reports, invitation letters, and permits.
-                </li>
-                <li>
-                    Coordinated internal meetings and monitored the implementation of subsequent actions to ensure efficiency.
-                </li>
-                <li>
-                    Reported organizational activities to the Head of Management Program.
-                </li>
-            </ul>
+<main>
+    <!-- ================= Hero ================= -->
+    <section class="org-hero">
+        <div class="org-logo-wrap">
+            <img src="image/icon/himamen.png" alt="Himamen Trilogi">
         </div>
 
-        <!-- ROLE 2 -->
-        <div class="role-block">
-            <p class="org-position">
-                Head of Education Division<br>
-                <span>2021 — 2022</span>
-            </p>
-
-            <ul class="core-list">
-                <li>
-                    Coordinated an 8-member team and increased team productivity by 40% through effective communication strategies and efficient work systems.
-                </li>
-                <li>
-                    Executed and supervised three Educational Division programs with over 200 student participants, focusing on enhancing students’ knowledge and skill development.
-                </li>
-            </ul>
+        <div class="org-text">
+            <h1>HIMAMEN Trilogi</h1>
+            <p class="org-intro">HIMAMEN (Himpunan Mahasiswa Manajemen) Trilogi is a student organization at the study program level that serves as a platform for developing academic competence, leadership, and soft skills among Management students. </p>
         </div>
-    </div>
+    </section>
 
-    <div class="core-image-hima"> 
-        <img src="image/himamen-hero2.jpg" alt="HIMAMEN Trilogi Activity">
-    </div>
-</section>
+    <!-- ================= Core Responsibility ================= -->
+    <section class="org-core"> 
+        <div class="core-text">
+            <span class="section-label">ROLE OVERVIEW</span>
+            <h2>Core Responsibilities</h2>
 
-<section class="org-events">
-    <h2>Organizational Events</h2>
-    <p class="events-subtitle">
-        Additional Organizational Contributions
-    </p>
+            <!-- ROLE 1 -->
+            <div class="role-block">
+                <p class="org-position">
+                    Secretary<br>
+                    <span>2022 — 2023</span>
+                </p>
 
-    <div class="timeline">
+                <ul class="core-list">
+                    <li>
+                        Managed administrative tasks by organizing and archiving 100+ official documents, including proposals, accountability reports, invitation letters, and permits.
+                    </li>
+                    <li>
+                        Coordinated internal meetings and monitored the implementation of subsequent actions to ensure efficiency.
+                    </li>
+                    <li>
+                        Reported organizational activities to the Head of Management Program.
+                    </li>
+                </ul>
+            </div>
 
-        <div class="timeline-item" onclick="openEvent(this)"
-            data-title="Marketpreneur#10"
-            data-role="20-21 Sept 2023"
-            data-tasks="Managed event proposal, ToR, and sponsorship proposal to support planning and fundraising.;Managed invitation letters and attendance records in a structured and professional manner.;Scheduled meetings and distributed meeting minutes to support team coordination.;Prepared a final report for documentation and evaluation purposes.">
+            <!-- ROLE 2 -->
+            <div class="role-block">
+                <p class="org-position">
+                    Head of Education Division<br>
+                    <span>2021 — 2022</span>
+                </p>
 
-            <div class="timeline-body">
-                <span class="timeline-date">20-21 Sept 2023</span>
-                <h3>Secretary of "Marketpreneur#10"</h3>
-                <p>Marketpreneur is an annual event at Universitas Trilogi designed to foster creativity, innovation, and an entrepreneurial mindset among students through educational and competitive activities.</p>
-                <span class="timeline-link">View details</span>
+                <ul class="core-list">
+                    <li>
+                        Coordinated an 8-member team and increased team productivity by 40% through effective communication strategies and efficient work systems.
+                    </li>
+                    <li>
+                        Executed and supervised three Educational Division programs with over 200 student participants, focusing on enhancing students’ knowledge and skill development.
+                    </li>
+                </ul>
             </div>
         </div>
 
-        <div class="timeline-item" onclick="openEvent(this)"
-            data-title="Marketpreneur#9"
-            data-role="2-3 Nov 2022"
-            data-tasks="
-            Coordinated and led a team of 43 committee members to ensure the smooth execution of the event.;
-            Successfully attracted 475 participants for the seminar and workshop.;
-            Hosted distinguished speakers, including: Adeline Widyaningraras (Founder of This is Your Skincare),Joanne Victoria (Head of Marketing at Luxcrime),Deddy Huang (Content & Digital Specialist)">
+        <div class="core-image-hima"> 
+            <img src="image/himamen-hero2.jpg" alt="HIMAMEN Trilogi Activity">
+        </div>
+    </section>
 
-            <div class="timeline-body">
-                <span class="timeline-date">2-3 Nov 2022</span>
-                <h3>Vice Project of "Marketpreneur#9"</h3>
-                <p>Marketpreneur is an annual event at Universitas Trilogi designed to foster creativity, innovation, and an entrepreneurial mindset among students through educational and competitive activities.</p>
-                <span class="timeline-link">View details</span>
+    <!-- ================= Event Projects ================= -->
+    <section class="org-events">
+        <h2>Organizational Events</h2>
+        <p class="events-subtitle">
+            Additional Organizational Contributions
+        </p>
+
+        <div class="timeline">
+
+            <div class="timeline-item" onclick="openEvent(this)"
+                data-title="Marketpreneur#10"
+                data-role="20-21 Sept 2023"
+                data-tasks="Managed event proposal, ToR, and sponsorship proposal to support planning and fundraising.;Managed invitation letters and attendance records in a structured and professional manner.;Scheduled meetings and distributed meeting minutes to support team coordination.;Prepared a final report for documentation and evaluation purposes.">
+
+                <div class="timeline-body">
+                    <span class="timeline-date">20-21 Sept 2023</span>
+                    <h3>Secretary of "Marketpreneur#10"</h3>
+                    <p>Marketpreneur is an annual event at Universitas Trilogi designed to foster creativity, innovation, and an entrepreneurial mindset among students through educational and competitive activities.</p>
+                    <span class="timeline-link">View details</span>
+                </div>
             </div>
+
+            <div class="timeline-item" onclick="openEvent(this)"
+                data-title="Marketpreneur#9"
+                data-role="2-3 Nov 2022"
+                data-tasks="
+                Coordinated and led a team of 43 committee members to ensure the smooth execution of the event.;
+                Successfully attracted 475 participants for the seminar and workshop.;
+                Hosted distinguished speakers, including: Adeline Widyaningraras (Founder of This is Your Skincare),Joanne Victoria (Head of Marketing at Luxcrime),Deddy Huang (Content & Digital Specialist)">
+
+                <div class="timeline-body">
+                    <span class="timeline-date">2-3 Nov 2022</span>
+                    <h3>Vice Project of "Marketpreneur#9"</h3>
+                    <p>Marketpreneur is an annual event at Universitas Trilogi designed to foster creativity, innovation, and an entrepreneurial mindset among students through educational and competitive activities.</p>
+                    <span class="timeline-link">View details</span>
+                </div>
+            </div>
+
         </div>
+    </section>
 
-    </div>
-</section>
-
-
-
-<!-- MODAL -->
-<div class="modal-overlay" id="eventModal">
-    <div class="modal-box">
-        <div class="modal-close" onclick="closeModal()">
-            <i class="fa-solid fa-xmark"></i>
-        </div>
-        <h3 id="modalTitle"></h3>
-        <span id="modalRole"></span>
-        <ul id="modalTasks"></ul>
-    </div>
-</div>
-
-<section id="footer">
-    <div class="container1">
-        <div class="footer-content">
-            <p class="footer-text">
-                Dwi Astika
-            </p>
-
-            <a href="https://www.linkedin.com/in/dwiastika"
-               target="_blank"
-               aria-label="LinkedIn">
-                <i class="fa-brands fa-linkedin-in"></i>
-            </a>
-
-            <a href="mailto:dwi9astika@gmail.com"
-               aria-label="Email">
-                <i class="fa-regular fa-envelope"></i>
-            </a>
-
-            <p class="footer-copy">
-                &copy; 2025 All rights reserved.
-            </p>
+    <!-- ================= Modal ================= -->
+    <div class="modal-overlay" id="eventModal">
+        <div class="modal-box">
+            <div class="modal-close" onclick="closeModal()">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <h3 id="modalTitle"></h3>
+            <span id="modalRole"></span>
+            <ul id="modalTasks"></ul>
         </div>
     </div>
-</section>
 
-<div id="whatsapp-global"></div>
+    <!-- ================= Footer ================= -->
+    <div id="footer-global"></div>
+
+    <!-- ================= Whatsapp Floating ================= -->
+    <div id="whatsapp-global"></div>
+</main>
 
 <script>
     const modal = document.getElementById('eventModal');
@@ -194,5 +179,6 @@
         if (e.key === 'Escape') closeModal();
     });
 </script>
+
 </body>
 </html>
