--- a/genbi.html
+++ b/genbi.html
@@ -8,9 +8,9 @@
     <!-- Fonts & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/organisasi.css">
-    <link rel="stylesheet" href="./components/style-components.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/organisasi.css">
+    <link rel="stylesheet" href="components/style-components.css">
     <script src="js/loader.js"></script>
 
 </head>
