--- a/noona_closet.html
+++ b/noona_closet.html
@@ -7,7 +7,7 @@
 <!-- Fonts & Icons -->
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/noona.css">
-<link rel="stylesheet" href="./components/style-components.css">
+<link rel="stylesheet" href="components/style-components.css">
 <script src="js/loader.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
