--- a/project_rakamin_jakmall.html
+++ b/project_rakamin_jakmall.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/rakamin.css">
-<link rel="stylesheet" href="./components/style-components.css">
+<link rel="stylesheet" href="components/style-components.css">
 <script src="js/loader.js"></script>
 
 </head>
