--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -6,7 +6,7 @@
 <title>Yup's Gurt Project | Dwi Astika</title>
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/yups.css">
-<link rel="stylesheet" href="./components/style-components.css">
+<link rel="stylesheet" href="components/style-components.css">
 <script src="js/loader.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>   
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
